logic/search-service/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    app: search-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
      - name: search-service
        image: search-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
